...
    final theme = Theme.of(context);

    return Scaffold(
      body: Column(
        children: [
          DisplayRow(
            title: 'Game Details',
            actions: [
              IconButton(
                icon: Icon(Icons.arrow_back, color: theme.colorScheme.onSurface),
                // return the updated matchData so the caller can refresh
                onPressed: () => Navigator.pop(context),
              ),
...
//                               elevation: 6,
//                               shadowColor: theme.shadowColor,
//                               surfaceTintColor: theme.colorScheme.primaryContainer,
//                             ),
//                             child: const Padding(
//                               padding: EdgeInsets.symmetric(horizontal: 8.0),
//                               child: Text('Edit Game', textAlign: TextAlign.center),
//                             ),
//                           ),
//                         ),
//                         const SizedBox(width: 16),
//                         Expanded(
//                           child: ElevatedButton(
...
//                                   fontSize: 16,
//                                   color: theme.colorScheme.onSurface,
//                                 ),
//                               ),
//                               const SizedBox(height: 8),
//                               Text(
//                                 'Rounds:',
//                                 style: TextStyle(
//                                   fontSize: 16,
//                                   fontWeight: FontWeight.bold,
//                                   color: theme.colorScheme.primary,
//                                 ),
//                               ),
...
