...
          const NavigationDestination(
            icon: Icon(Icons.bluetooth),
            label: 'Connect',
          ),
          const NavigationDestination(
            icon: Icon(Icons.sports_kabaddi),
            label: 'Games',
          ),
          NavigationDestination(
            icon: SizedBox(
              width: 24,
              height: 24,
              child: Stack(
...
                    left: -10,
                    child: Icon(Icons.add, size: 18),
                  ),
                ],
              ),
            ),
            label: 'Add Game',
          ),
          const NavigationDestination(
            icon: Icon(Icons.settings),
            label: 'Settings',
          ),
          const NavigationDestination(           
...
